// file: pkg/cache/proto/requests/list_subscriptions_request.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/jdfalk/gcommon/pkg/cache/proto;cachepb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Request to list active cache subscriptions.
 */
message ListSubscriptionsRequest {
  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 1 [lazy = true];
}
