// file: pkg/cache/proto/requests/watch_request.proto
edition = "2023";

package gcommon.v1.cache;

import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/cache/proto";

/**
 * Request to watch a cache key for changes.
 */
message WatchRequest {
  // Key to watch
  string key = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
