// file: pkg/web/proto/requests/configure_global_request.proto
// version: 1.0.0
// guid: 53f1a181-4823-4590-977d-dcd614b74421

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";

// Standard imports
import "google/protobuf/timestamp.proto";
// Common types
import "common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/web/proto";

/**
 * ConfigureGlobalRequest message for web service operations.
 * Auto-generated placeholder - implement specific fields as needed.
 *
 * Follows 1-1-1 pattern: one message per file.
 */
message ConfigureGlobalRequest {
  // Required fields (1-10)

  // Optional fields (11-50)

  /**
   * Request processing metadata including timing, request ID,
   * and other observability information.
   */
  gcommon.v1.common.RequestMetadata request_metadata = 11;

  // Timestamps (51-60)

  /**
   * Timestamp when this request was created.
   */
  google.protobuf.Timestamp requested_at = 51;
}
