// file: pkg/web/proto/requests/get_server_health_request.proto
// version: 1.0.0
// guid: 150fcfd0-33d0-453e-a628-70235d0d760d

edition = "2023";

package gcommon.v1.web;

option go_package = "../../../../pkg/web/pb;webpb";

// Standard imports
import "google/protobuf/timestamp.proto";

// Common types
import "pkg/common/proto/messages/request_metadata.proto";
import "pkg/common/proto/messages/error.proto";

/**
 * GetServerHealthRequest message for web service operations.
 * Auto-generated placeholder - implement specific fields as needed.
 *
 * Follows 1-1-1 pattern: one message per file.
 */
message GetServerHealthRequest {
  // Required fields (1-10)

  // Optional fields (11-50)

  /**
   * Request processing metadata including timing, request ID,
   * and other observability information.
   */
  gcommon.v1.common.RequestMetadata request_metadata = 11;

  // Timestamps (51-60)

  /**
   * Timestamp when this request was created.
   */
  google.protobuf.Timestamp requested_at = 51;
}
