// file: pkg/web/proto/requests/list_servers_request.proto
// version: 1.0.0
// guid: 1b601e51-740d-448e-b1cf-ca06a0180bee

edition = "2023";

package gcommon.v1.web;

option go_package = "../../../../pkg/web/pb;webpb";

// Standard imports
import "google/protobuf/timestamp.proto";

// Common types
import "pkg/common/proto/messages/request_metadata.proto";

/**
 * ListServersRequest message for web service operations.
 * Auto-generated placeholder - implement specific fields as needed.
 *
 * Follows 1-1-1 pattern: one message per file.
 */
message ListServersRequest {
  // Required fields (1-10)

  // Optional fields (11-50)

  /**
   * Request processing metadata including timing, request ID,
   * and other observability information.
   */
  gcommon.v1.common.RequestMetadata request_metadata = 11;

  // Timestamps (51-60)

  /**
   * Timestamp when this request was created.
   */
  google.protobuf.Timestamp requested_at = 51;
}
